--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pablo Volonté</title>
-  <link rel="shortcut icon" href="./asset/img/pngfind.com-logos-png-gratis-3397568.png" type="image/png" />  
+  <link rel="shortcut icon" href="./asset/img/pngfind.com-logos-png-gratis-3397568.png" type="image/png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="./CSS/style.css" />   
+  <link rel="stylesheet" href="./CSS/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -16,16 +16,16 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div>
         <a class="navbar-brand" href="https://www.google.com">
-          <img src="./asset/img/pngfind.com-logos-png-gratis-3397568.png" alt="Imagen de logo" width="40px">  
-        </a>   
+          <img src="./asset/img/pngfind.com-logos-png-gratis-3397568.png" alt="Imagen de logo" width="40px">
+        </a>
       </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="d-flex justify-content.end">
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
+                      <ul class="navbar-nav me-auto mb-2 mb-lg-0 decoracion">
+                        <li class="nav-item ">
                               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
@@ -41,7 +41,7 @@
                               <a class="nav-link active" aria-current="page" href="./page/contacto.html">Contacto</a>
                             </li>
                         </ul>
-                      </div>                   
+                      </div>
                     </div>
                   </div>
                   </div>
@@ -68,13 +68,13 @@
             </div>
           </div>
         </div>
-          <section class="conteiner">                                
+          <section class="conteiner">
               <p class="lorem"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, dolore voluptate. Deserunt voluptate natus ipsam atque sint. Officia voluptatum, libero obcaecati distinctio autem optio culpa dicta facere voluptas quam quasi! </p>  
           </section>
-          
+
       </main>
         <footer class=" ">
-              <div>            
+              <div>
                     <section>
                           <nav class="navbar navbar-expand-lg navbar-light bg-light">
                                 <div class="container-fluid">
@@ -98,7 +98,7 @@
                                           <li class="nav-item">
                                             <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a>
                                           </li>
-                                      </ul>    
+                                      </ul>
                                       <form class="d-flex">
                                       </form>
                                   </div>
@@ -107,11 +107,10 @@
               </section>
               </div>
 
-                    <p class="datosDeContacto"> 
+                    <p class="datosDeContacto">
                     Datos de Contacto
                     Dirección -  Teléfono
                   </p>
-                    
                           <ol class="rrss">
                                 <li> <a href="https://facebook.com/pablo volonte" class="Facebook ">facebook</a> </li>
                                 <br/>
