--- a/index.html
+++ b/index.html
@@ -11,116 +11,108 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body class="conteiner">
+<body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #eee;" />
+      <div class="container-fluid">
         <a class="navbar-brand" href="https://www.google.com">
-          <img src="./asset/img/pngfind.com-logos-png-gratis-3397568.png" alt="Imagen de logo" width="40px">
+          <img src="./asset/img/pngfind.com-logos-png-gratis-3397568.png" alt="Imagen de logo" width="40px" />
         </a>
+      <div class="d-flex justify-content-end">
+        <div>
+          <button class="navbar-toggler justify-content-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mb-2 mb-lg -0">
+          <li class="nav-item ">
+            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./page/herramientas.html">Herramientas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./page/portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./page/servicios.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./page/contacto.html">Contacto</a>
+          </li>
+        </ul>
       </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="d-flex justify-content-end">
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav me-auto mb-2 mb-lg-0 decoracion">
-                        <li class="nav-item ">
-                              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="./page/herramientas.html">Herramientas</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="./page/portafolio.html">Portafolio</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="./page/servicios.html">Servicios</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="./page/contacto.html">Contacto</a>
-                            </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                  </div>
-                </nav>
-      </header>
-
-       <main>
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./asset/img/img prog.jpg" class="d-block w-100" alt="Imagen Banner" height="250px">
-            </div>
-            <div class="carousel-item">
-              <img src="./asset/img/img prog 2.jpg" class="d-block w-100" alt="imagen banner" height="250px">
-            </div>
-            <div class="carousel-item">
-              <img src="./asset/img/img prog 3.jpg" class="d-block w-100" alt="imagen banner" height="250px">
-            </div>
-            <div class="carousel-item">
-              <img src="./asset/img/img prog 4.jpg" class="d-block w-100" alt="imagen banner" height="250px">
-            </div>
-            <div class="carousel-item">
-              <img src="./asset/img/img prog 5.jpg" class="d-block w-100" alt="imagen banner" height="250px">
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./asset/img/img prog.jpg" class="d-block w-100" alt="Imagen Banner 1" height="250px" />
+        </div>
+        <div class="carousel-item">
+          <img src="./asset/img/img prog 2.jpg" class="d-block w-100" alt="imagen banner 2" height="250px" />
+        </div>
+        <div class="carousel-item">
+          <img src="./asset/img/img prog 3.jpg" class="d-block w-100" alt="imagen banner 3" height="250px" />
+        </div>
+        <div class="carousel-item">
+          <img src="./asset/img/img prog 4.jpg" class="d-block w-100" alt="imagen banner 4" height="250px" />
+        </div>
+        <div class="carousel-item">
+          <img src="./asset/img/img prog 5.jpg" class="d-block w-100" alt="imagen banner 5" height="250px">
+        </div>
+      </div>
+    </div>
+    <section class="conteiner">
+      <p class="lorem"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, dolore voluptate. Deserunt voluptate natus ipsam atque sint. Officia voluptatum, libero obcaecati distinctio autem optio culpa dicta facere voluptas quam quasi! </p>  
+    </section>
+  </main>
+  <footer>
+    <div>
+      <section>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./herramientas.html">Herramientas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./portafolio.html">Portafolio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./servicios.html">Servicios</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a>
+                </li>
+              </ul>
+              <form class="d-flex">
+              </form>
             </div>
           </div>
-        </div>
-          <section class="conteiner">
-              <p class="lorem"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, dolore voluptate. Deserunt voluptate natus ipsam atque sint. Officia voluptatum, libero obcaecati distinctio autem optio culpa dicta facere voluptas quam quasi! </p>  
-          </section>
-
-      </main>
-        <footer class=" ">
-              <div>
-                    <section>
-                          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                                <div class="container-fluid">
-                                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
-                                  </button>
-                                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                      <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                                          </li>
-                                          <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="./herramientas.html">Herramientas</a>
-                                          </li>
-                                          <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="./portafolio.html">Portafolio</a>
-                                          </li>
-                                          <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="./servicios.html">Servicios</a>
-                                          </li>
-                                          <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a>
-                                          </li>
-                                      </ul>
-                                      <form class="d-flex">
-                                      </form>
-                                  </div>
-                                </div>
-                              </nav>
-              </section>
-              </div>
-
-                    <p class="datosDeContacto">
-                    Datos de Contacto
-                    Dirección -  Teléfono
-                  </p>
-                          <ol class="rrss">
-                                <li> <a href="https://facebook.com/pablo volonte" class="Facebook ">facebook</a> </li>
-                                <br/>
-                                <li><a href="https://twitter.com/pablovolonte" class="Twitter"> Twitter </a> </li>
-                                <br/>
-                                <li><a href="https://instagram.com/pablo.volonte" class="Instagram"> Instagram </a> </li>
-                                <br/>
-                                <li><a href="https://wa.me/5493512079883" class="WhatsApp">Whatsapp </a> </li>
-                          </ol>
-        </footer>
-
+        </nav>
+      </section>
+    </div>
+    <p class="datosDeContacto">
+      Datos de Contacto
+      Dirección -  Teléfono
+    </p>
+    <ol class="rrss">
+      <li> <a href="https://facebook.com/pablo volonte" class="Facebook ">facebook</a> </li>
+      <li><a href="https://twitter.com/pablovolonte" class="Twitter"> Twitter </a> </li>
+      <li><a href="https://instagram.com/pablo.volonte" class="Instagram"> Instagram </a> </li>
+      <li><a href="https://wa.me/5493512079883" class="WhatsApp">Whatsapp </a> </li>
+    </ol>
+  </footer>
 </body>
 </html>
